# GobLang

./: .gitignore  CMakeLists.txt  GobLang.hpp  LICENSE  compiler.cpp  indev.cpp  jit.cpp  main.cpp  readme.md  test.cpp
codegen/: Builder.cpp  Builder.hpp  ByteCode.hpp  CodeGenValue.cpp  CodeGenValue.hpp  CodeGenerator.cpp  CodeGenerator.hpp  CodeNode.cpp  CodeNode.hpp  Disassembly.hpp  Lexems.hpp  Parser.cpp  Parser.hpp  SpecialCharacter.hpp  Token.cpp  Token.hpp
compiler/: ByteCode.hpp  Compiler.cpp  Compiler.hpp  CompilerNode.cpp  CompilerNode.hpp  CompilerToken.cpp  CompilerToken.hpp  Disassembly.hpp  FunctionTokenSequence.hpp  Lexems.hpp  Parser.cpp  Parser.hpp  ReversePolishGenerator.cpp  ReversePolishGenerator.hpp  SpecialCharacter.hpp  Token.cpp  Token.hpp  Validator.cpp  Validator.hpp
examples/: add_arrays.gob  draw_box.gob  fib.gob  filter.gob  function.gob  hello_world.gob  inf_num_guess.gob  linked_list.gob  nested_loop.gob  number_guessing.gob  print_mat.gob  read_all_lines.gob  read_and_write_to_file.gob  recursion.gob  text.txt
execution/: Array.cpp  Array.hpp  Exception.cpp  Exception.hpp  Function.hpp  FunctionRef.cpp  FunctionRef.hpp  Machine.cpp  Machine.hpp  Memory.cpp  Memory.hpp  NativeStructure.cpp  NativeStructure.hpp  Operations.hpp  String.cpp  String.hpp  Structure.cpp  Structure.hpp  Type.cpp  Type.hpp  Value.cpp  Value.hpp
jit_compiler/: Compiler.cpp  JIT.hpp
standard/: File.cpp  File.hpp  MachineFunctions.cpp  MachineFunctions.hpp
